fixing broken lines, adding typography example

--- a/bootstrap_1.html
+++ b/bootstrap_1.html
@@ -223,6 +223,7 @@ opening and closing tags</li>
                 <h2>Why would I want to use Bootstrap?</h2> 
                 <p>Why reinvent the wheel?</p>
                 <p>Bootstrap is designed to be responsive - your HTML elements will respond to changes in screen size.</p>
+                <img src="image/bootstrap_all.jpg">
             </section>
             <section>
                 <p>So this desktop design:</p>
@@ -269,7 +270,7 @@ opening and closing tags</li>
             </section>
             <section>
                     <h2>See it in action!</h2>
-                <p>Check out some of the components by opening the <b>example.html</b> file in your browser window.</p>
+                <p>Check out some of the components by opening the <a href="examples/example.html"><code>example.html</code></a> file in your browser window.</p>
             </section>
 </section>
 
@@ -306,12 +307,12 @@ opening and closing tags</li>
 </section>
                 <section>
                 <h2>See it in action!</h2>
-                <p>Open up columns.html in your browser window.</p>
+                <p>Open up <a href="examples/columns.html" target="blank"><code>columns.html</code></a> in your browser window.</p>
                 <p>Resize your browser to see where the columns break to fit 100% of the width.</p>
             </section>
             <section>
                 <h2>See it in action!</h2>
-                <p>Open up columns-fluid.html in your browser window.</p>
+                <p>Open up <a href="examples/columns-fluid.html" target="blank"><code>columns-fluid.html</code></a> in your browser window.</p>
                 <p>Resize your browser to see where the columns break to fit 100% of the width.</p>
             </section>
             <section>
@@ -371,6 +372,14 @@ opening and closing tags</li>
             <section data-background="#f05b62">
                 <h2 style="color: #fafafa;">Typography</h2>
             </section>
+            <section>
+                <h2>Typography</h2>
+                <p>Bootstrap's base <a href="http://v4-alpha.getbootstrap.com/content/typography/" target="_blank">typography classes</a> normalize headings, paragraph fonts, list styles and more.</p>
+                <p><a href="http://v4-alpha.getbootstrap.com/components/utilities/" target="_blank">Textual utility</a> classes are also included for layout</p>
+
+                <iframe height='265' scrolling='no' src='//codepen.io/trucnguyen/embed/PzGNGj/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/PzGNGj/'>Bootstrap - Typography</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
+</iframe>
+            </section>
         </section>
 
 
@@ -389,6 +398,9 @@ opening and closing tags</li>
 	            <li><code>.img-rounded</code> applies rounded edges</li>
 	            <li><code>.img-circle</code> takes a square image and applies the style <code>border-radius: 50%;</code></li>
 	            <li><code>.img-thumbnail</code> applies a border with rounded edges to the image</li>
+
+                <iframe height='265' scrolling='no' src='//codepen.io/trucnguyen/embed/KMzYGe/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/KMzYGe/'>Bootstrap - Image Styles</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
+</iframe>
             </ul>
             
             </section>
