--- a/exercises/hero/hero_instructions.html
+++ b/exercises/hero/hero_instructions.html
@@ -11,8 +11,8 @@
         <h1>Bootstrap: Hero Homepage Exercise</h1>
         <p>The goal of this exercise is to use the CSS classes and components you've learned so far from <a href="http://v4-alpha.getbootstrap.com">Bootstrap</a> to lay out a homepage for your website.
 
-        <h3>Part 1: Navigation, Jumbrotron</h3>
-        <p>Download the <a href="hero_starter.html">starter code</a> by right clicking and saving the file to your computer. Save the file as <strong>index.html</strong></p>
+        <h3>Navigation & Jumbrotron</h3>
+        <p>Download the <a href="hero_starter.html">starter code</a> by right clicking and saving the file to your computer. Save the file as <strong><code>index.html</code></strong></p>
 
         <h5>Add navigation</h5>
         <ul>
@@ -36,10 +36,13 @@
 
         <h5>Bonus: </h5>
         <ul>
-            <li>As a stretch goal to keep practicing using Bootstrap components.</li>
-            <li>Add a carousel</li>
+            <li>Keep practicing using Bootstrap components, add other components like buttons, experiment with other navs or typography classes (e.g. blockquote).</li>
+            <li>Override the Bootstrap base CSS styles with your own colors, font choices, etc!</li>
+            <li>As a stretch goal, add a carousel.</li>
         </ul>
 
+  <p>Note: Your projects are all going to be different because it's your personal homepage. The solution file is not meant to be prescriptive, but just show you what's possible using basic components.
+  </p>
   <button class="btn" onclick="showSolution();">Show Solution</button>
 
    <div id="solution" style="display:none; margin-top: 20px;">
