--- a/exercises/hero/hero_solution.html
+++ b/exercises/hero/hero_solution.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Grid</title>
+        <title>Hero Solution</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -14,65 +14,78 @@
     </head>
 
     <body>
-      <nav class="navbar navbar-dark navbar-full">
-        <ul class="nav navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Girl Develop It <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Curriculum</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Get Involved</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="jumbotron">
-        <h1>Girl Develop It</h1>
-        <p class="lead">Girl Develop It is a nonprofit organization that exists to provide affordable and judgment-free opportunities for women interested in learning web and software development. Through in-person classes and community support, Girl Develop It helps women of diverse backgrounds achieve their technology goals and build confidence in their careers and their every day lives.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="navbar navbar-dark navbar-full">
+          <ul class="nav navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Girl Develop It <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Curriculum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Get Involved</a>
+            </li>
+          </ul>
+        </nav>
       </div>
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img src="https://placekitten.com/200/300" class="img-fluid" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img src="https://placekitten.com/200/300" class="img-fluid" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img src="https://placekitten.com/200/300" class="img-fluid" alt="Third slide">
-          </div>
+      <div class="row">
+        <div class="jumbotron">
+          <h1>Girl Develop It</h1>
+          <p class="lead">Girl Develop It is a nonprofit organization that exists to provide affordable and judgment-free opportunities for women interested in learning web and software development. Through in-person classes and community support, Girl Develop It helps women of diverse backgrounds achieve their technology goals and build confidence in their careers and their every day lives.</p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </p>
         </div>
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="icon-prev" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="icon-next" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-<footer>
-  <nav class="nav nav-inline">
-    <a class="nav-link active" href="#">Active</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Another link</a>
-  </nav>
-</footer>
+      <div class="row" id="carousel" class="center-block">
+        <div class="col-sm-6 col-sm-offset-3">
+        <h4>GDI members have interests outside workshops...</h4>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img src="https://placekitten.com/800/300" class="img-fluid center-block" alt="I <3 kittens">
+              <div class="carousel-caption"><h5>GDI members like kittens.</h5></div>
+            </div>
+            <div class="carousel-item">
+              <img src="http://lorempixel.com/800/300/food/" class="img-fluid center-block" alt="I also like food">
+              <div class="carousel-caption"><h5>We love food too!</h5></div>
+            </div>
+            <div class="carousel-item">
+              <img src="http://lorempixel.com/800/300/nature/" class="img-fluid center-block" alt="and nature">
+              <div class="carousel-caption"><h5>Going outside is great after hours staring at the computer!</h5></div>
+            </div>
+          </div>
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="icon-prev" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="icon-next" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        </div>
+      </div>
 
+      <footer>
+        <nav class="nav nav-inline">
+          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Another link</a>
+        </nav>
+      </footer>
+  </div>
 
     </body>
 </html>
