Added more card content!

--- a/bootstrap_2.html
+++ b/bootstrap_2.html
@@ -110,8 +110,7 @@
 
             <section data-background="#f05b62">
                 <h2><a style="color: #ffffff;" href="exercises/hero/hero_instructions.html" target="_blank">
-                    Exercise Time:
-                    Homepage
+                    Exercise: Homepage
                     </a>
                 </h2>
 
@@ -129,8 +128,8 @@
 
                 <section>
                     <h2>.form-group</h2>
-                    <p>Use .form-group to organize your forms</p>
-                    <p>Can be used on block elements like fieldset or div</p>
+                    <p>Use <code>.form-group</code> to organize sections of your forms</p>
+                    <p>Can be used on block elements like <code>fieldset</code> or <code>div</code></p>
                     <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/LNMjvm/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/LNMjvm/'>LNMjvm</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
@@ -138,12 +137,12 @@
                 <section>
                     <h2>.form-control</h2>
                     <p>Use to style...</p>
-                    <ul>
-                        <li>Textual inputs (e.g. text, number, email, color, etc.)</li>
+                    <ul style="white-space: nowrap;">
+                        <li>Textual inputs (e.g. text, number, email)</li>
                         <li>Select menus</li>
                         <li>Textareas</li>
                     </ul>
-                    <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/LNMjvm/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/LNMjvm/'>LNMjvm</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+                    <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/ezdZdx/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/ezdZdx/'>.form-control</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
 
@@ -156,7 +155,7 @@
 
                 <section>
                     <h2>Buttons</h2>
-                    <p>Add a .btn class along with a style class to your button.</p>
+                    <p>Add a <code>.btn</code> class along with a style class to your button.</p>
                     <p>Bootstrap has six styles and variations.</p>
                     <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/oxJGXP/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/oxJGXP/'>buttons</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
@@ -164,23 +163,26 @@
 
                 <section>
                     <h2>Button tweaks</h2>
-                    <p>Use .btn-lg or .btn-sm for larger or smaller buttons, respectively.</p>
-                    <p>Use .btn-block for block-level buttons.</p>
-                    <p>Use disabled attribute to disable your buttons.</p>
+                    <p>Use <code>.btn-lg</code> or <code>.btn-sm</code> for larger or smaller buttons, respectively.</p>
+                    <p>Use <code>.btn-block</code> for block-level buttons.</p>
+                    <p>Use <code>disabled</code> attribute to disable your buttons.</p>
                     <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/WwLZQr/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/WwLZQr/'>button tweaks</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
 </section>
                 <section>
                     <h2>Modals</h2>
-                    <p>Modals are prettier versions of dialog prompts!</p>
+                    <p>Prettier versions of dialog prompts!</p>
+                    <p>Triggers sans JS: Set <code>data-target</code> to the modal's ID.</p>
+                    <p>Consists of header, body, and footer.</p>
                     <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/yJOKYO/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/yJOKYO/'>modals</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
 
                 <section>
                     <h2>Alerts</h2>
-                    <p>Alerts provide contextual feedback messages for typical user actions. Bootstrap has four styles.</p>
+                    <p>User <code>.alert</code> to provide contextual feedback messages for user actions.</p>
+                    <p>Bootstrap has four styles: <code>alert-*</code>.</p>
                     <iframe height='266' scrolling='no' src='//codepen.io/mjawili/embed/wGRrWa/?height=266&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/wGRrWa/'>alerts</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>   
                 </section>
@@ -189,14 +191,36 @@
                     <h2><a style="color: #ffffff;" href="exercises/contact/contact_instructions.html" target="_blank">Exercise: Contact Me form</a></h2>
                 </section>
 
+<!-- CARDS -->
+<section>
+                <section data-background="#f05b62" style="color: #ffffff;">
+                    <h2>Cards</h2>
+                </section>
+
                 <section>
                     <h2>Cards</h2>
-                    <p>Use this flexible and extensible content container to display images.</p>
-                    <p>They replaced Bootstrap 3's old panels, wells, and thumbnails.</p>
-                    <p>Wrap them as a deck to have them as separate yet similarly-sized.</p>
-                    <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/dMwVYg/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/dMwVYg/'>Cards</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+                    <p>Flexible, extensible content container</p>
+                    <p>Replaced Bootstrap 3's old panels and thumbnails</p>
+                    <img src="image/cards.png"/>
+                </section>
+
+                <section>
+                    <h2>Cards Content Types</h2>
+                    <p>A variety is supported! Mix and match.<br>
+                        <code>.card-img-*</code>, <code>.card-title</code>, <code>.card-text</code>,<br>
+                        <code>.card-list*</code>, <code>.card-link</code>.</p>
+                    <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/dMwVYg/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/dMwVYg/'>card content types</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
+
+                <section>
+                    <h2>Cards Organization</h2>
+                    <p>Use <code>.card-group</code>, <code>.card-deck</code>, or <code>.card-column</code></p>
+                    <p><code>.card-column</code> creates a Pinterest-board affect.</p>
+                    <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/gMwwQr/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/gMwwQr/'>card organization</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+                    </iframe>
+                </section>
+</section>
 
                 <section data-background="#f05b62">
                     <h2><a style="color: #ffffff;" href="exercises/gallery/gallery_instructions.html" target="_blank">Exercise: Gallery</a></h2>
