--- a/exercises/grid/grid_solution.html
+++ b/exercises/grid/grid_solution.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+      <div class="container">
         <div id="animals" class="row">
           <div class="col-xs-12 col-sm-6 col-md-4">
             <h2>Kittens</h2>
@@ -25,5 +26,6 @@
             <p>Rabbits are small mammals in the family Leporidae of the order Lagomorpha, found in several parts of the world. There are eight different genera in the family classified as rabbits, including the European rabbit (Oryctolagus cuniculus), cottontail rabbits (genus Sylvilagus; 13 species), and the Amami rabbit (Pentalagus furnessi, an endangered species on Amami Ōshima, Japan). There are many other species of rabbit, and these, along with pikas and hares, make up the order Lagomorpha. The male is called a buck and the female is a doe; a young rabbit is a kitten or kit.</p>
           </div>
         </div>
+      </div>
     </body>
 </html>
