Added ghpages exercise
Also added a missing step in start_git.
Also corrected file name of directory.

--- a/exercises/start_git/start_git_instructions.html
+++ b/exercises/start_git/start_git_instructions.html
@@ -28,6 +28,7 @@
       <ol>
         <li>In Github Desktop, add a summary and description for your commit. Press the "Commit to master" button.</li>
         <li>Press the "Publish" button.</li>
+        <li>In the dialog that appears, ensure Name is the same as your local folder and Account is yours, and click the "Publish Repository" button.</li>
       </ol>
 
       <h3>Part 3: Verify your commit on Github</h3>
