--- a/github.html
+++ b/github.html
@@ -384,17 +384,11 @@ git checkout version2
           <img src="image/merge-pr.png" />
           <p>Once merged, Pull Requests preserve a record of the historical changes to your code.</p>
         </section>
+      </section>
 
-        <section>
-          <h2>Exercise!</h2>
-          <ol>
-            <li>Fork and clone our <a href="">student directory repo</a>.</li>
-            <li>Create your own branch.</li>
-            <li>Locally edit and commit your changes.</li>
-            <li>Make a pull request!</li>
-          </ol>
-        </section>
-    </section>
+      <section data-background="#f05b62">
+        <h2><a style="color: #ffffff;" href="exercises/directory/directory_instructions.html" target="_blank">Exercise: Contribute To A Repo</a></h2>
+      </section>
 
       <section>
         <section data-background="#f05b62">
@@ -408,20 +402,17 @@ git checkout version2
             <li>Designed to host your personal, organization, or project pages directly from a GitHub repository</li>
           </ul>
         </section>
+      </section>
 
-        <section>
-          <h2>Create a gh-pages branch</h2>
-          <p>Go to your existing repository.</p>
-          <p>Click the branch drop-down on the left-hand side.</p>
-          <p>Type in "gh-pages" and press enter.</p>
-        </section>
+      <section data-background="#f05b62">
+        <h2><a style="color: #ffffff;" href="exercises/ghpages/ghpages_instructions.html" target="_blank">Exercise: Host Your Stuff On Github Pages</a></h2>
+      </section>
 
         <section>
           <h2>Questions?</h2>
           <div style = "font-size:1200%; height:100%; margin-top:40%" class ="blue">?
             <div class ="clear"></div></div>
         </section>
-      </section>
 
 				<section>
 					<h1>THE END</h1>
