Cleanup slides based on day 1 notes

--- a/bootstrap_1.html
+++ b/bootstrap_1.html
@@ -277,7 +277,7 @@ opening and closing tags</li>
 <!-- GRID SYSTEM -->
 		<section>
             <section data-background="#f05b62">
-                <h2 style="color: #fafafa;">The Bootstrap Grid System</h2>
+                <h2 style="color: #fafafa;">Bootstrap Grid System</h2>
             </section>
             <section>
                 <p>Bootstrap is based on a 12-column grid, and uses CSS classes to decide the width of each element.</p>
@@ -365,12 +365,31 @@ opening and closing tags</li>
 </div></code></pre>
 <p><small>Four 25% columns on desktop that break to 100% width on a tablet.</small></p>
 
+            </section>
+            <section>
+                <h2>Multiple Grid Classes</h2>
+<pre><code class="xml" data-trim>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            [COLUMN 1 CONTENT]
+        </div>
+        <div class="col-xs-6 col-md-4">
+            [COLUMN 2 CONTENT]
+        </div>
+    </div>
+</div></code></pre>
+                <img src="image/bootstrap_example_grid.png">
+            </section>
 </section>
-</section>
+
+            <section data-background="#f05b62">
+                <h2><a style="color: #ffffff;" href="exercises/grid_instructions.html">Exercise: Grid</a></h2>
+            </section>
 
         <section>
             <section data-background="#f05b62">
-                <h2 style="color: #fafafa;">Typography</h2>
+                <h2 style="color: #fafafa;">Content</h2>
             </section>
             <section>
                 <h2>Typography</h2>
@@ -378,36 +397,28 @@ opening and closing tags</li>
                 <p><a href="http://v4-alpha.getbootstrap.com/components/utilities/" target="_blank">Textual utility</a> classes are also included for layout</p>
 
                 <iframe height='265' scrolling='no' src='//codepen.io/trucnguyen/embed/PzGNGj/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/PzGNGj/'>Bootstrap - Typography</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
-</iframe>
-            </section>
-        </section>
+                </iframe>
+                </section>
 
-
-            <section>
-            <section data-background="#f05b62">
-                <h2 style="color: #fafafa;">Images</h2>
-            </section>
-            <section>
+                            <section>
                 <h2><a href="http://v4-alpha.getbootstrap.com/content/images/">Responsive Images</a></h2>
                 <p><a href="http://v4-alpha.getbootstrap.com/content/images/">Images in Bootstrap 4</a> can be made responsive by adding the <code>.img-fluid</code> class.
                 <p>Applies <code>max-width: 100%;</code> and <code>height: auto;</code> so it scales to fit the parent element.</p>
             </section>
              <section>
-            	<h2>Other Image Styles</h2>
+                <h2>Other Image Styles</h2>
             <ul>
-	            <li><code>.img-rounded</code> applies rounded edges</li>
-	            <li><code>.img-circle</code> takes a square image and applies the style <code>border-radius: 50%;</code></li>
-	            <li><code>.img-thumbnail</code> applies a border with rounded edges to the image</li>
+                <li><code>.img-rounded</code> applies rounded edges</li>
+                <li><code>.img-circle</code> takes a square image and applies the style <code>border-radius: 50%;</code></li>
+                <li><code>.img-thumbnail</code> applies a border with rounded edges to the image</li>
 
                 <iframe height='265' scrolling='no' src='//codepen.io/trucnguyen/embed/KMzYGe/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/KMzYGe/'>Bootstrap - Image Styles</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
 </iframe>
             </ul>
             
             </section>
-</section>
-
+        </section>
 			</div>
-
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
