--- a/bootstrap_2.html
+++ b/bootstrap_2.html
@@ -85,7 +85,7 @@
 
             <section>
                 <h2>Position - Fix To Bottom</h2>
-<iframe height='290' scrolling='no' src='//codepen.io/trucnguyen/embed/mEPjOv/?height=290&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/mEPjOv/'>Bootstrap Navbar - Position fixed to bottom</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
+<iframe height='500' scrolling='no' src='//codepen.io/trucnguyen/embed/mEPjOv/?height=500&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/trucnguyen/pen/mEPjOv/'>Bootstrap Navbar - Position fixed to bottom</a> by Truc (<a href='http://codepen.io/trucnguyen'>@trucnguyen</a>) on <a href='http://codepen.io'>CodePen</a>.
 </iframe>
             </section>
 
@@ -174,7 +174,7 @@
                     <h2>Modals</h2>
                     <p>Prettier versions of dialog prompts!</p>
                     <p>Triggers sans JS: Set <code>data-target</code> to the modal's ID.</p>
-                    <p>Consists of header, body, and footer.</p>
+                    <p>Consists of <code>header</code>, <code>body</code>, and <code>footer</code>.</p>
                     <iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/yJOKYO/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/yJOKYO/'>modals</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
                     </iframe>
                 </section>
