--- a/exercises/contact/contact_solution.html
+++ b/exercises/contact/contact_solution.html
@@ -34,7 +34,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-md-6 col-md-offset-3">
       <h3>Contact Me</h3>
       <p>If you would like to contact me, please fill out this form.</p>
       <form action="mailto:mj@mjawili.com" method="get">
@@ -62,6 +62,7 @@
 </div>
 
 <footer>
+  <hr />
   <nav class="nav nav-inline">
     <a class="nav-link" href="#"><i class="fa fa-linkedin"></i> LinkedIn</a>
     <a class="nav-link" href="#"><i class="fa fa-github"></i> Github</a>
