--- a/exercises/directory/directory_instructions.html
+++ b/exercises/directory/directory_instructions.html
@@ -22,7 +22,7 @@
       <h5>Make your changes locally</h5>
       <ol>
         <li>In your text editor, open <code>index.html</code> in the gdi-summer-2016-students repo.</li>
-        <li>Add your code and save your changes.</li>
+        <li>Add your code and save your changes. Include your to-be-online portfolio: <code>http://[your username].github.io/[your repo]</code>.</li>
         <li>In Github Desktop, with the gdi-summer-2016-students repo selected in the left panel, click on "View" &rarr; "Uncommitted Changes". Notice that <code>index.html</code> is listed in the middle panel, and your changes are highlighted in green in the right panel.</li>
         <li>In the form at the bottom of Github Desktop's middle panel, fill out the "Summary" and "Description" fields and click on the "Commit to master" button.</li>
       </ol>
