Corrected directory exercise instructions

--- a/exercises/directory/directory_instructions.html
+++ b/exercises/directory/directory_instructions.html
@@ -30,7 +30,7 @@
       <h5>Push your changes to your repo on Github</h5>
       <ol>
         <li>In Github Desktop, click on the "Sync" button in the top right corner. That's it!</li>
-        <li>Go to <code>https://github.com/[your username]/gdi-summer-2016-students</code> and see your commit!</li>
+        <li>Go to <code>https://github.com/[your username]/gh-pages</code> and see your commit!</li>
       </ol>
 
       <h5>Merge your changes into the original directory repo</h5>
