Clarified ghpages exercise instructions

--- a/exercises/ghpages/ghpages_instructions.html
+++ b/exercises/ghpages/ghpages_instructions.html
@@ -21,7 +21,7 @@
 
       <h5>Configure your repo</h5>
       <ol>
-        <li>Click on the "Settings" tab and then "Branches" in the left column.</li>
+        <li>Still in your portfolio repo on Github, click on the "Settings" tab and then "Branches" in the left column.</li>
         <li>Under the "Default branch" section, select "gh-pages" from the dropdown list and click the "Update" button.</li>
       </ol>
 
